Link wg. stack/unstack eingefügt

--- a/Einfuehrung_in_Pandas.ipynb
+++ b/Einfuehrung_in_Pandas.ipynb
@@ -5582,7 +5582,9 @@
     "```python\n",
     "    by_age.rating.mean().unstack(0).fillna(0)\n",
     "```\n",
-    "We would have had our age groups as rows and movie titles as columns."
+    "We would have had our age groups as rows and movie titles as columns.\n",
+    "\n",
+    "**RvS**: Mehr zu stack / unstack findet man etwa [hier](http://www.datasciencemadesimple.com/reshape-using-stack-unstack-function-pandas-python/)"
    ]
   },
   {
@@ -5857,7 +5859,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
